basic layout - alpha

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,38 @@
-# Logs
-logs
-*.log
+# --- Node ---
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
+bun.lockb
 
-node_modules
-dist
-dist-ssr
-*.local
+# --- Build output (Vite) ---
+dist/
+build/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# --- Environment variables ---
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# --- Editor / OS files ---
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# --- VS Code ---
+.vscode/
+*.code-workspace
+
+# --- Logs ---
+logs/
+*.log
+*.log.*
+
+# --- Cache ---
+.cache/
+.tmp/
+vite.config.timestamp-*
+vite-deps-*
+.vite/
